Images bug fixed. Also fixed a bug with kanban on mobile devices

--- a/src/pages/Kanban/Kanban.scss
+++ b/src/pages/Kanban/Kanban.scss
@@ -82,7 +82,7 @@
     min-height: rem(100px);
 
     @include resolution(520px) {
-      min-height: auto;
+      min-height: rem(20px);
     }
   }
 
